--- a/src/Pages/Customer/Landing/LoginModal.css
+++ b/src/Pages/Customer/Landing/LoginModal.css
@@ -33,7 +33,8 @@
   line-height: 48px;
   text-align: center;
   color: #520000;
-  margin-top: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .close {
