--- a/src/Pages/Admin/Item/Item.css
+++ b/src/Pages/Admin/Item/Item.css
@@ -37,8 +37,8 @@
   /* line-height: 48px; */
   text-align: center;
   color: #520000;
-  margin: 0%;
-  /* margin-top: 10px; */
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .close {
@@ -65,8 +65,9 @@
 }
 
 .modal-content {
-  margin-top: 16px;
+  margin-top: 5%;
   padding: 0;
+
 }
 
 .modal-footer {
@@ -362,7 +363,8 @@
   /* line-height: 48px; */
   text-align: center;
   color: #520000;
-  margin-top: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .view-edit {
@@ -416,5 +418,5 @@
 .view-image {
   margin-top: 5%;
   margin-bottom: 5%;
-  width: 20vw;
+  width: 15vw;
 }
