--- a/src/Pages/Admin/Item/Item.css
+++ b/src/Pages/Admin/Item/Item.css
@@ -320,6 +320,35 @@
   background-color: rgba(54, 67, 72, 0.8);
 }
 
+.order-okay {
+  background: #520000;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
+  color: #FFFFFF;
+  font-size: medium;
+  width: 8vw;
+  height: 5vh;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 10px;
+}
+
+.order-cancel {
+  background: #FFFFFF;
+  border: none;
+  border-radius: 10px;
+  font-family: 'Inter';
+  font-weight: 600;
+  color: #520000;
+  font-size: medium;
+  width: 8vw;
+  height: 5vh;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 10px;
+}
+
 /* VIEW EMPLOYEE CSS */
 
 .view-item-container {
