--- a/src/Pages/Admin/Orders/Orders.css
+++ b/src/Pages/Admin/Orders/Orders.css
@@ -230,8 +230,39 @@
 .complete {
     background: #245B0A;
 }
+  
+.status-content {
+    display: flex;
+    align-items: center;
+}
+  
+.status-content .order-status {
+    margin-left: 5px;
+}
 
-/* .order-icon {
-    width: 30%;
-    height: 30%;
-} */
+.status-content .order-status {
+    margin-left: 5px;
+} 
+
+
+
+.status {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #520000;
+    margin-left: 5px;
+}
+
+.status-order {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #837A7A;
+    margin-left: 5px;
+}
+
+.order-icon {
+    width: 25px;
+    height: 25px;
+} 
