--- a/src/Pages/Admin/Dashboard/Dashboard.css
+++ b/src/Pages/Admin/Dashboard/Dashboard.css
@@ -10,7 +10,8 @@
     position: fixed;
     width: 25%;
     height: 10%;
-    margin: 2% 0% 0% 12%;
+    top: 4.5%;
+    left: 12%;
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
@@ -169,7 +170,7 @@
 .search {
     position: fixed;
     right: 7%;
-    top: 5%;
+    top: 4.5% !important;
     font-family: 'Inter';
     width: 15%;
     height: 35px;
