--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -216,7 +216,7 @@ footer.modal_footer {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #e4c8a4;
 }
 
 ::-webkit-scrollbar-thumb {
