--- a/src/Pages/Customer/Product/ProductPage.css
+++ b/src/Pages/Customer/Product/ProductPage.css
@@ -196,8 +196,9 @@ body {
 
 
 .product-img {
-    width: fit-content;
-    height: 25vh;
+    object-fit: cover;
+    width: 100%;
+    max-height: 25vh;
     border-radius: 25px;
     display: flex;
     justify-content: center;
