--- a/src/Pages/Customer/Home/Home.css
+++ b/src/Pages/Customer/Home/Home.css
@@ -166,8 +166,9 @@ body {
 }
 
 .p-container {
-    height: 100%;
+    /* height: 100vh; */
     width: 20vw;
+    max-height: 40vh;
     margin: auto;
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
