--- a/src/Pages/Customer/Home/Home.css
+++ b/src/Pages/Customer/Home/Home.css
@@ -168,7 +168,7 @@ body {
 .p-container {
     /* height: 100vh; */
     width: 20vw;
-    max-height: 40vh;
+    /* max-height: 40vh; */
     margin: auto;
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -187,7 +187,7 @@ body {
     font-family: 'Inter';
     font-size: x-large;
     font-weight: 700;
-    margin: auto;
+    /* margin: auto; */
     margin-left: 5%;
 }
 
@@ -273,7 +273,7 @@ body {
 }
 
 .item-image {
-    width: 10vw;
+    width: 15vw;
     border: none;
     border-radius: 10px;
 }
@@ -282,3 +282,28 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.iname {
+    font-family: 'Inter';
+    font-size: x-large;
+    font-weight: 700;
+    /* margin: auto; */
+    margin-left: 20%;
+    margin-bottom: 10%;
+}
+
+.idescription {
+    font-size: medium;
+    margin-left: 20%;
+    margin-bottom: 10%;
+    font-weight: bold;
+}
+
+.itype {
+    font-size: medium;
+    font-style: italic;
+    margin-bottom: 10%;
+    margin-left: 20%;
+}
+
+.istar {}
