--- a/src/Pages/Customer/Cart/Cart.css
+++ b/src/Pages/Customer/Cart/Cart.css
@@ -22,28 +22,28 @@
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
-    font-size: xx-large;
+    font-size: large;
     align-items: center;
     color: #520000;
 }
 
 .order-summary-total {
     font-family: 'Inter';
-    font-style: bold;
     font-weight: 700;
     font-size: large;
     color: #000000;
-    margin-left: auto;
-    text-align: center;
-    width: max-content;
+    text-align: right;
 }
 
 .summary-total-footer {
-    margin-top: 20%;
+    margin-top: 5%;
 }
 
 .summary-table {
     padding: 5%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
 }
 
 .order-summary {
@@ -58,7 +58,7 @@
     overflow: hidden;
     height: auto;
     background-color: #FFFFFF;
-    margin: 20%;
+    margin: 12%;
 }
 
 .order-summary-price {
@@ -70,27 +70,33 @@
 .order-summary table {
     table-layout: fixed;
     width: 100%;
-}
-
-.order-summary td.last-col {
-    width: 3%; 
+    align-self: center;
 }
   
-.order-summary th,
 .order-summary td {
-    width: 25%;
+    width: auto;
+}
+
+.LCol {
+    width: 5px;
+    text-align: right;
+}
+
+.order-summary thead {
+    align-self: center;
 }
 
 .summary-table-header {
-    display: flex;
+    align-self: center;
     align-items: center;
     text-align: center;
     font-family: 'Inter';
     font-style: bold;
     font-weight: 900;
-    font-size: xx-large;
+    font-size: x-large;
     align-items: center;
     color: #520000;
+    padding: 0;
 }
 
 .summary-info {
@@ -106,6 +112,6 @@
 
 .order-summary-out,
 .order-summary-cancel {
-    width: 10%;
-    height: 10%;
+    width: 40%;
+    height: 40%;
 }
