--- a/src/Pages/Customer/Cart/Cart.css
+++ b/src/Pages/Customer/Cart/Cart.css
@@ -156,3 +156,24 @@ input[type="checkbox"] {
     width: 100%;
     height: 100%;
 }
+
+.check-out {
+    position: fixed;
+    top: 5%;
+    right: 23%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-size: small;
+    background-color: #520000;
+    color: #FFFFFF;
+    width: 5%;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    padding-right: 3%;
+    padding-left: 1%;
+    background-position: 75% 50%;
+    background-repeat: no-repeat;
+    text-align: center;
+    cursor: pointer;
+}
