--- a/src/Pages/Admin/Landing/Landing.css
+++ b/src/Pages/Admin/Landing/Landing.css
@@ -228,3 +228,7 @@ footer.modal_footer {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.button-container button.transparent-button:hover {
+  cursor: pointer;
+}
