--- a/src/Pages/Customer/Cart/Cart.css
+++ b/src/Pages/Customer/Cart/Cart.css
@@ -157,23 +157,19 @@ input[type="checkbox"] {
     height: 100%;
 }
 
-.check-out {
-    position: fixed;
-    top: 5%;
-    right: 23%;
-    font-family: 'Inter';
-    font-style: normal;
-    font-size: small;
+.proceed-button{
     background-color: #520000;
     color: #FFFFFF;
-    width: 5%;
-    height: 35px;
-    border-radius: 5px;
+    width: 60%;
+    height: 5vh;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: large;
     border: none;
-    padding-right: 3%;
-    padding-left: 1%;
-    background-position: 75% 50%;
-    background-repeat: no-repeat;
-    text-align: center;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
     cursor: pointer;
 }
