--- a/src/Pages/Admin/Orders/Orders.css
+++ b/src/Pages/Admin/Orders/Orders.css
@@ -276,11 +276,11 @@
     margin-left: 5px;
 }
 
-/* .status-order-pending:hover::after {
+.status-order-pending:hover::after {
     content: "pending";
     position: absolute;
-    top: 57%;
-    left: 50%;
+    top: 56%;
+    left: 45%;
     transform: translateX(-50%);
     color: #837A7A;
     font-size: small;
@@ -289,9 +289,10 @@
 
 .status-order-failed:hover::after {
     content: "failed";
+    position: absolute;
     top: 56%;
-    left: 60%;
-    transform: translateX(200%);
+    left: 45%;
+    transform: translateX(-50%);
     color: #520000;
     font-size: small;
     white-space: nowrap;
@@ -302,7 +303,7 @@
     position: absolute;
     top: 56%;
     left: 45%;
-    transform: translateX(-60%);
+    transform: translateX(-50%);
     color: #ECCA00;
     font-size: small;
     white-space: nowrap;
@@ -317,7 +318,45 @@
     color: #245B0A;
     font-size: small;
     white-space: nowrap;
-} */
+}
+
+.status-payment-pending {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #520000;
+    margin-left: 5px;
+}
+
+.status-payment-complete {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #245B0A;
+    margin-left: 5px;
+}
+
+.status-payment-pending:hover::after {
+    content: "not paid";
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #520000;
+    font-size: small;
+    white-space: nowrap;
+}
+
+.status-payment-complete:hover::after {
+    content: "paid";
+    position: absolute;
+    top: 65%;
+    left: 48%;
+    transform: translateX(-50%);
+    color: #245B0A;
+    font-size: small;
+    white-space: nowrap;
+}
 
 .order-icon {
     width: 25px;
