Added Track Order

--- a/src/Pages/Customer/Home/Home.css
+++ b/src/Pages/Customer/Home/Home.css
@@ -323,3 +323,26 @@ body {
     text-align: center;
     cursor: pointer;
 }
+
+.add-order-track {
+    position: fixed;
+    top: 5%;
+    right: 23%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-size: small;
+    background-color: #520000;
+    color: #FFFFFF;
+    width: 6%;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    padding-right: 3%;
+    padding-left: 1%;
+    background-image: url(../../../Assets//NavIcons/cart.svg);
+    background-size: 20%;
+    background-position: 75% 50%;
+    background-repeat: no-repeat;
+    text-align: center;
+    cursor: pointer;
+}
