--- a/src/Pages/AboutUs/AboutUs.css
+++ b/src/Pages/AboutUs/AboutUs.css
@@ -99,6 +99,12 @@
   margin-bottom: 5px;
 }
 
-.team h2{
+.meetTitle h2{
   text-align: center;
+}
+
+.link-style {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
 }
