--- a/src/Pages/Customer/Cart/Cart.css
+++ b/src/Pages/Customer/Cart/Cart.css
@@ -25,7 +25,7 @@
     font-size: large;
     align-items: center;
     color: #520000;
-    padding-right: 20vw;
+    padding-right: 17vw;
 }
 
 .order-summary-total {
@@ -37,7 +37,7 @@
 }
 
 .summary-total-footer {
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 .summary-tablee {
@@ -132,9 +132,55 @@
 
 .order-summary-out,
 .order-summary-cancel {
-    width: 40%;
-    height: 40%;
+  width: 40%;
+  height: 40%;
+  cursor: pointer;
+  position: relative;
 }
+
+.unavailable-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.unavailable-text {
+  position: absolute;
+  top: -1.5rem;
+  left: 5rem;
+  transform: translateX(-50%);
+  color: #520000;
+  font-size: small;
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.unavailable-wrapper:hover .unavailable-text {
+  opacity: 1;
+}
+
+/* .order-summary-out:hover::after,
+.order-summary-cancel:hover::after {
+  content: "cancel";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #520000;
+  font-size: small;
+  white-space: nowrap;
+} */
+
+/* .order-summary-out:hover::after {
+  content: "out of stock";
+  position: absolute;
+  top: 100%; 
+  left: 50%;
+  transform: translateX(-50%);
+  color: #520000;
+  font-size: small;
+  white-space: nowrap;
+} */
 
 /* ORDER TYPE CSS */
 
