--- a/src/Pages/Customer/Profile/Profile.css
+++ b/src/Pages/Customer/Profile/Profile.css
@@ -66,6 +66,13 @@ tbody tr td:first-child {
     align-items: start !important;
 }
 
+.user-d {
+    width: max-content;
+    font-weight: normal;
+    display: flex;
+    align-items: center !important;
+}
+
 .user-margin {
     margin-right: 15% !important;
 }
@@ -74,6 +81,13 @@ tbody tr td:first-child {
     display: flex;
     flex-direction: row;
     margin-top: 3%;
+}
+
+.tr-row-2 {
+    display: flex;
+    flex-direction: row;
+    margin-top: 3%;
+    justify-content: space-around;
 }
 
 .button-row-profile {
