--- a/src/Pages/Customer/Cart/Cart.css
+++ b/src/Pages/Customer/Cart/Cart.css
@@ -47,6 +47,16 @@
     align-self: center;
 }
 
+.summary-table-1 {
+    padding: 8%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    /* overflow-y: scroll; */
+    /* overflow-x: hidden; */
+    max-height: 35vh;
+}
+
 .summary-table {
     padding: 5%;
     display: flex;
