--- a/src/Pages/AboutUs/AboutUs.css
+++ b/src/Pages/AboutUs/AboutUs.css
@@ -108,3 +108,29 @@
   text-decoration: none;
   font-weight: bold;
 }
+
+.team-member .icon {
+  width: 150px; /* Adjust the width to your desired size */
+  height: 150px; /* Adjust the height to your desired size */
+  border-radius: 15%
+}
+
+.meetTitle img{
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  width: 50%; /* Adjust the width to your desired size */
+  /* height: 300px; Adjust the height to your desired size */
+  border-radius: 15%;
+}
+
+.prof img{
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  width: 50%; /* Adjust the width to your desired size */
+  /* height: 300px; Adjust the height to your desired size */
+  border-radius: 15%;
+}
